# privateGPTServer

./: .env  .gitignore  Dockerfile  README.md  app.py  changelog.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
api/: database.py  main.py  models.py  schemas.py
